<resources>
    <string name="app_name">tugas 2</string>
    <string name="selamat_pag">Selamat Pagi </string>
    <string name="olivia_gabr">olivia.gabrielle@gmail.com</string>
    <string name="scan_kode_d">Scan kode dibalik tutup botol dan tukarkan hadiah menarik</string>
    <string name="vaganza_fie">Vaganza Fiesta</string>
    <string name="hadiah_mena">Hadiah Menarik</string>
    <string name="temukan_kod">Temukan kode\ndibalik tutup botol</string>
    <string name="scan_tutup_">Scan Tutup Botol</string>
    <string name="total_tutup">Total Tutup Botol\n<b>Olivia Gabrielle</b> <font color="#1A529D">30</font></string>
    <string name="setiap_kali">Setiap kali Anda berhasil memindai kode yang belum pernah diklaim sebelumnya, Anda akan menerima 1 poin.</string>
    <string name="scan_ktp_un">Scan KTP untuk melanjutkan proses klaim tutup botol. Pastikan foto KTP terlihat dengan jelas</string>
    <string name="selamat">Selamat Anda Berhasil\nKlaim Tutup Botol 🎉</string>
    <string name="klaim">Klaim tutup botol lainnya dan\ntukarkan hadiah menarik</string>
    <string name="some_id">30</string>
    <string name="redeemvagan">RedeemVaganza</string>
    <string name="selamatklaim">Selamat Anda Mendapatkan\nUndian ExtraVaganza🎉</string>
    <string name="some1_id">30</string>
    <string name="periode">Periode\nPenukaran</string>
    <string name="penggunaroyal">Pengguna mendapatkan undian hadiah secara reguler</string>
    <string name="akhirbulan">Setiap akhir bulan</string>
    <string name="anda_belum_melakukan_penukaran_pada_bulan_ini">Anda belum melakukan penukaran\npada bulan ini</string>
</resources>